# pkpass

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
examples/: basic.rs
pkpass/: Cargo.toml
pkpass-cli/: Cargo.toml
pkpass-cli/src/: create.rs  crypto.rs  main.rs
pkpass-macros/: Cargo.toml
pkpass-macros/src/: lib.rs  spec.rs
pkpass-server/: Cargo.toml
pkpass-server/src/: main.rs
pkpass/examples/: basic.rs
pkpass/src/: error.rs  lib.rs  sign.rs  template.rs
pkpass/src/models/: fields.rs  impls.rs  manifest.rs  mod.rs  semantics.rs
src/: lib.rs  main.rs  models.rs  sign.rs
