[package]
name = "pkpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
hex = "0.4.3"
openssl = "0.10.64"
rcgen = "0.13.1"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
unic-langid = "0.9.5"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
zip = "2.1.3"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

expect_used = "warn"
# missing_docs_in_private_items = "warn"
print_literal = "warn"
unwrap_used = "warn"
