[workspace]
resolver = "2"
members = [
  "pkpass",
  "pkpass-cli",
  "pkpass-server",
]

[workspace.dependencies]
pkpass = { path = "pkpass" }

[workspace.lints]
[workspace.lints.rust]
unsafe_code = "deny"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

expect_used = "warn"
# missing_docs_in_private_items = "warn"
print_literal = "warn"
unwrap_used = "warn"
