[workspace]
resolver = "2"
members = [
  "pkpass",
  "pkpass-cli",
  "pkpass-server",
]

[workspace.package]
authors = ["Milo Moisson"]
edition = "2021"
license = "CECILL"
repository = "https://github.com/wirolibre/pkpass"
rust-version = "1.77"

[workspace.dependencies]
pkpass = { path = "pkpass" }

openssl = "0.10"
ron = "0.8"

[workspace.lints]
[workspace.lints.rust]
unsafe_code = "deny"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

expect_used = "warn"
# missing_docs_in_private_items = "warn"
print_literal = "warn"
redundant_pub_crate = "allow"
unwrap_used = "warn"
