lints.workspace = true

[package]
name = "pkpass-cli"
version = "0.1.0"
default-run = "pkp"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "pkp"
path = "src/main.rs"

[dependencies]
pkpass.workspace = true

openssl.workspace = true
ron.workspace = true

clap = { version = "4", features = ["derive", "env"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
