lints.workspace = true

[package]
name = "pkpass-macros"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"
synstructure = "0.13.0"
