lints.workspace = true

[package]
name = "pkpass"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
openssl = "0.10.64"
serde = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
unic-langid = "0.9.5"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
yansi = "1.0.1"
zip = "2.1.3"
