lints.workspace = true

[package]
name = "pkpass"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openssl.workspace = true
ron.workspace = true

chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
hex = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
unic-langid = "0.9"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
yansi = "1"
zip = "2"
